Issue 5 (title not centered) solved

--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -1313,7 +1313,7 @@ table a,
   }
   #pageintro article {
     max-width: none;
-    text-align: left;
+    text-align: center;
   }
   #pageintro .heading {
     font-size: 2rem;
